--- a/src/records/2023.md
+++ b/src/records/2023.md
@@ -16,6 +16,8 @@
 |      |                  | [Exercism] | [Clock](https://exercism.org/tracks/rust/exercises/clock) |
 |      |                  | [Exercism] | [Anagram](https://exercism.org/tracks/rust/exercises/anagram) |
 |      |                  | [Exercism] | [Space Age](https://exercism.org/tracks/rust/exercises/space-age) |
+| W40  | 2023.10.03 (Tue) | [LeetCode] | [4. Median of Two Sorted Arrays](https://leetcode.com/problems/median-of-two-sorted-arrays/) |
+|      |                  | [LeetCode] | [5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/) |
 
 [LeetCode]: https://leetcode.com/
 [Exercism]: https://exercism.org/
