--- a/src/records/2023.md
+++ b/src/records/2023.md
@@ -18,6 +18,8 @@
 |      |                  | [Exercism] | [Space Age](https://exercism.org/tracks/rust/exercises/space-age) |
 | W40  | 2023.10.03 (Tue) | [LeetCode] | [4. Median of Two Sorted Arrays](https://leetcode.com/problems/median-of-two-sorted-arrays/) |
 |      |                  | [LeetCode] | [5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/) |
+| W41  | 2023.10.15 (Sun) | [LeetCode] | [6. Zigzag Conversion](https://leetcode.com/problems/zigzag-conversion/) |
+|      |                  | [Exercism] | [Sublist](https://exercism.org/tracks/rust/exercises/sublist) |
 
 [LeetCode]: https://leetcode.com/
 [Exercism]: https://exercism.org/
