--- a/src/records/2023.md
+++ b/src/records/2023.md
@@ -20,6 +20,8 @@
 |      |                  | [LeetCode] | [5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/) |
 | W41  | 2023.10.15 (Sun) | [LeetCode] | [6. Zigzag Conversion](https://leetcode.com/problems/zigzag-conversion/) |
 |      |                  | [Exercism] | [Sublist](https://exercism.org/tracks/rust/exercises/sublist) |
+| W42  | 2023.10.21 (Sat) | [LeetCode] | [7. Reverse Integer](https://leetcode.com/problems/reverse-integer) |
+|      |                  | [Exercism] | [Luhn](https://exercism.org/tracks/rust/exercises/luhn) |
 
 [LeetCode]: https://leetcode.com/
 [Exercism]: https://exercism.org/
