--- a/src/records/2023.md
+++ b/src/records/2023.md
@@ -22,8 +22,11 @@
 |      |                  | [Exercism] | [Sublist](https://exercism.org/tracks/rust/exercises/sublist) |
 | W42  | 2023.10.21 (Sat) | [LeetCode] | [7. Reverse Integer](https://leetcode.com/problems/reverse-integer) |
 |      |                  | [Exercism] | [Luhn](https://exercism.org/tracks/rust/exercises/luhn) |
-| W44  | 2023.11.01 (Wed) | [LeetCode] | [String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi) |
+| W44  | 2023.11.01 (Wed) | [LeetCode] | [8. String to Integer (atoi)](https://leetcode.com/problems/string-to-integer-atoi) |
 |      |                  | [Exercism] | [Parallel Letter Frequency](https://exercism.org/tracks/rust/exercises/parallel-letter-frequency) |
+| W45  | 2023.11.05 (Sun) | [LeetCode] | [9. Palindrome Number](https://leetcode.com/problems/palindrome-number) |
+|      |                  | [Exercism] | [Macros](https://exercism.org/tracks/rust/exercises/macros) |
+
 
 [LeetCode]: https://leetcode.com/
 [Exercism]: https://exercism.org/
