--- a/src/records/2023.md
+++ b/src/records/2023.md
@@ -26,6 +26,8 @@
 |      |                  | [Exercism] | [Parallel Letter Frequency](https://exercism.org/tracks/rust/exercises/parallel-letter-frequency) |
 | W45  | 2023.11.05 (Sun) | [LeetCode] | [9. Palindrome Number](https://leetcode.com/problems/palindrome-number) |
 |      |                  | [Exercism] | [Macros](https://exercism.org/tracks/rust/exercises/macros) |
+| W47  | 2023.11.14 (Tue) | [LeetCode] | [10. Regular Expression Matching](https://leetcode.com/problems/regular-expression-matching) |
+|      |                  | [Exercism] | [Poker](https://exercism.org/tracks/rust/exercises/poker) |
 
 
 [LeetCode]: https://leetcode.com/
