--- a/src/records/2023.md
+++ b/src/records/2023.md
@@ -28,6 +28,8 @@
 |      |                  | [Exercism] | [Macros](https://exercism.org/tracks/rust/exercises/macros) |
 | W47  | 2023.11.14 (Tue) | [LeetCode] | [10. Regular Expression Matching](https://leetcode.com/problems/regular-expression-matching) |
 |      |                  | [Exercism] | [Poker](https://exercism.org/tracks/rust/exercises/poker) |
+| W49  | 2023.11.27 (Mon) | [LeetCode] | [11. Container With Most Water](https://leetcode.com/problems/container-with-most-water/) |
+|      |                  | [Exercism] | [Forth](https://exercism.org/tracks/rust/exercises/forth) |
 
 
 [LeetCode]: https://leetcode.com/
